<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/problemsFragment">

    <fragment
        android:id="@+id/problemsFragment"
        android:name="com.example.roadsos.ui.problems.ProblemsFragment"
        android:label="@string/title_problems"
        tools:layout="@layout/fragment_problems">
        <action
            android:id="@+id/action_problemsFragment_to_problemDetailsFragment"
            app:destination="@id/problemDetailsFragment" />
        <action
            android:id="@+id/action_problemsFragment_to_problemsOnMapFragment"
            app:destination="@id/problemsOnMapFragment" />
    </fragment>

    <fragment
        android:id="@+id/newProblemTypeFragment"
        android:name="com.example.roadsos.ui.newProblem.NewProblemTypeFragment"
        android:label="@string/title_new_problem_type"
        tools:layout="@layout/fragment_new_problem_type">
        <action
            android:id="@+id/action_newProblemTypeFragment_to_newProblemLocationFragment"
            app:destination="@id/newProblemLocationFragment" />
    </fragment>

    <fragment
        android:id="@+id/myProblemsFragment"
        android:name="com.example.roadsos.ui.myProblems.MyProblemsFragment"
        android:label="@string/title_my_problems"
        tools:layout="@layout/fragment_my_problems">
        <action
            android:id="@+id/action_myProblemsFragment_to_editMyProblemFragment"
            app:destination="@id/editMyProblemFragment" />
    </fragment>
    <fragment
        android:id="@+id/newProblemLocationFragment"
        android:name="com.example.roadsos.ui.newProblem.NewProblemLocationFragment"
        android:label="@string/title_new_problem_location"
        tools:layout="@layout/fragment_new_problem_location">
        <action
            android:id="@+id/action_newProblemLocationFragment_to_newProblemDetailsFragment"
            app:destination="@id/newProblemDetailsFragment" />
        <argument
            android:name="problemType"
            app:argType="com.example.roadsos.model.ProblemType" />
    </fragment>
    <fragment
        android:id="@+id/newProblemDetailsFragment"
        android:name="com.example.roadsos.ui.newProblem.NewProblemDetailsFragment"
        android:label="@string/title_new_problem_details"
        tools:layout="@layout/fragment_new_problem_details">
        <argument
            android:name="problemType"
            app:argType="com.example.roadsos.model.ProblemType" />
        <action
            android:id="@+id/action_newProblemDetailsFragment_to_navigation_home"
            app:destination="@id/problemsFragment" />
        <argument
            android:name="problemLocation"
            app:argType="com.example.roadsos.model.MyLocation" />
    </fragment>
    <fragment
        android:id="@+id/problemDetailsFragment"
        android:name="com.example.roadsos.ui.problems.ProblemDetailsFragment"
        android:label="@string/title_problem_details">
        <argument
            android:name="problem"
            app:argType="com.example.roadsos.model.Problem" />
    </fragment>
    <fragment
        android:id="@+id/problemsOnMapFragment"
        android:name="com.example.roadsos.ui.problems.ProblemsOnMapFragment"
        android:label="@string/title_problems_on_map"
        tools:layout="@layout/fragment_problems_on_map">
        <action
            android:id="@+id/action_problemsOnMapFragment_to_problemDetailsFragment"
            app:destination="@id/problemDetailsFragment" />
        <action
            android:id="@+id/action_problemsOnMapFragment_to_problemsFragment"
            app:destination="@id/problemsFragment" />
    </fragment>
    <fragment
        android:id="@+id/editMyProblemFragment"
        android:name="com.example.roadsos.ui.myProblems.EditMyProblemFragment"
        android:label="@string/title_edit_my_problem"
        tools:layout="@layout/fragment_edit_my_problem">
        <argument
            android:name="problem"
            app:argType="com.example.roadsos.model.Problem" />
    </fragment>
</navigation>